--- a/index.html
+++ b/index.html
@@ -19,39 +19,34 @@
 
 <section class="dashboard">
 
-    <div class="panel-grid">
+    <!-- TOP PANELS -->
+    <div class="top-panels">
 
-        <div class="panel">
+        <div class="panel big">
             📢 Business Announcements
         </div>
 
-        <div class="panel" id="managementPanel" onclick="openManagement()">
+        <div class="panel big gold" onclick="openManagement()">
             👑 Management Center
         </div>
 
-        <div class="panel">
-            👕 <a href="kleiderordnung.html">Kleiderordnung</a>
-        </div>
+    </div>
 
-        <div class="panel">
-            🎵 Musik
-        </div>
+    <!-- SECOND ROW -->
+    <div class="middle-panels">
 
-        <div class="panel">
-            📅 Abmeldungen
-        </div>
+        <div class="panel small">👕 Kleiderordnung</div>
+        <div class="panel small">🎵 Musik</div>
+        <div class="panel small">📅 Abmeldungen</div>
 
-        <div class="panel">
-            👥 Mitarbeiter
-        </div>
+    </div>
 
-        <div class="panel">
-            📝 Bewerber
-        </div>
+    <!-- THIRD ROW -->
+    <div class="middle-panels">
 
-        <div class="panel">
-            📦 Einkäufe
-        </div>
+        <div class="panel small">👥 Mitarbeiter</div>
+        <div class="panel small">📝 Bewerber</div>
+        <div class="panel small">📦 Einkäufe</div>
 
     </div>
 
