--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- TOP PANELS -->
     <div class="top-panels">
 
-        <div class="panel big">
+        <div class="panel big" onclick="window.location.href='announcements.html'">
             📢 Business Announcements
         </div>
 
-        <div class="panel big gold" onclick="openManagement()">
+        <div class="panel big" onclick="window.location.href='management.html'">
             👑 Management Center
         </div>
 
@@ -35,18 +35,30 @@
     <!-- SECOND ROW -->
     <div class="middle-panels">
 
-        <div class="panel small">👕 Kleiderordnung</div>
-        <div class="panel small">🎵 Musik</div>
-        <div class="panel small">📅 Abmeldungen</div>
+        <div class="panel small" onclick="window.location.href='kleiderordnung.html'">
+            👕 Kleiderordnung
+        </div>
+        <div class="panel small" onclick="window.location.href='musik.html'">
+            🎵 Musik
+        </div>
+        <div class="panel small" onclick="window.location.href='abmeldungen.html'">
+            📅 Abmeldungen
+        </div>
 
     </div>
 
     <!-- THIRD ROW -->
     <div class="middle-panels">
 
-        <div class="panel small">👥 Mitarbeiter</div>
-        <div class="panel small">📝 Bewerber</div>
-        <div class="panel small">📦 Einkäufe</div>
+        <div class="panel small" onclick="window.location.href='announcements.html'">
+            👥 Mitarbeiter
+        </div>
+        <div class="panel small" onclick="window.location.href='announcements.html'">
+            📝 Bewerber
+        </div>
+        <div class="panel small" onclick="window.location.href='announcements.html'">
+            📦 Einkäufe
+        </div>
 
     </div>
 
