--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <div class="panel small" onclick="window.location.href='announcements.html'">
             👥 Mitarbeiter
         </div>
-        <div class="panel small" onclick="window.location.href='announcements.html'">
+        <div class="panel small" onclick="window.location.href='bewerber.html'">
             📝 Bewerber
         </div>
-        <div class="panel small" onclick="window.location.href='announcements.html'">
+        <div class="panel small" onclick="window.location.href='einkäufe.html'">
             📦 Einkäufe
         </div>
 
