--- a/login.html
+++ b/login.html
@@ -129,7 +129,7 @@ function login() {
     <input type="text" id="username" placeholder="Benutzername (z.B. HorvathA)" required>
     <input type="password" id="password" placeholder="4-stelliges Passwort" maxlength="4" required>
 
-    <button onclick="login()">Login</button>
+    <button onclick="handleLogin()">Login</button>
 
     <div class="hint">
         Standard Passwort: 0000
