--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Burgershot Login</title>
     <style>
@@ -99,11 +100,10 @@
 
     </style>
     <script src="script.js"></script> <script>
-function login() {
+function handleLogin() { // Umbenannt von login zu handleLogin
     let username = document.getElementById("username").value.trim();
     let password = document.getElementById("password").value.trim();
 
-    // Jetzt kennt der Browser getAccounts(), weil script.js geladen ist
     let accounts = getAccounts(); 
 
     if (!accounts[username]) {
