--- a/management.html
+++ b/management.html
@@ -35,8 +35,8 @@
 
         <div class="account-table-header">
             <span>Name</span>
-            <span>Position</span>
-            <span style="text-align: right;">Aktion</span>
+            <span>Rang</span>
+            <span style="text-align: right;">Aktionen</span>
         </div>
 
         <div id="accountList" class="account-list-container">
@@ -62,22 +62,19 @@ if (!isAdmin()) {
     window.location.href = "index.html";
 }
 
+// Liste der Ränge für die Buttons
+const rankOrder = ["Mitarbeiter_in", "Management", "Cheffe"];
+
 function createAccount() {
     const username = document.getElementById("newUsername").value.trim();
     const role = document.getElementById("newRole").value;
 
-    if (!username) {
-        alert("Bitte einen Namen eingeben.");
-        return;
-    }
+    if (!username) return alert("Name fehlt!");
 
     const accounts = getAccounts();
-    if (accounts[username]) {
-        alert("Dieser Mitarbeiter existiert bereits.");
-        return;
-    }
+    if (accounts[username]) return alert("Existiert bereits!");
 
-    // Standard-Passwort ist immer 0000, isFirstLogin markiert den Status
+    // Automatisch Passwort 0000 und Flag für ersten Login
     accounts[username] = { 
         password: "0000", 
         role: role, 
@@ -89,17 +86,63 @@ function createAccount() {
     loadAccounts();
 }
 
-function deleteAccount(username) {
+function changeRank(username, direction) {
     const accounts = getAccounts();
-    delete accounts[username];
-    saveAccounts(accounts);
-    loadAccounts();
+    let currentIndex = rankOrder.indexOf(accounts[username].role);
+    let newIndex = currentIndex + direction;
+
+    if (newIndex >= 0 && newIndex < rankOrder.length) {
+        accounts[username].role = rankOrder[newIndex];
+        saveAccounts(accounts);
+        loadAccounts();
+    }
 }
 
 function loadAccounts() {
     const accounts = getAccounts();
     const list = document.getElementById("accountList");
     list.innerHTML = "";
+
+    // Definition der Hierarchie (höchste Zahl = oben)
+    const roleWeight = {
+        "Cheffe": 3,
+        "Management": 2,
+        "Mitarbeiter_in": 1
+    };
+
+    // Accounts in ein Array umwandeln und sortieren
+    const sortedAccounts = Object.keys(accounts).sort((a, b) => {
+        const weightA = roleWeight[accounts[a].role] || 0;
+        const weightB = roleWeight[accounts[b].role] || 0;
+        
+        // Erst nach Rang sortieren, bei gleichem Rang alphabetisch nach Name
+        if (weightB !== weightA) {
+            return weightB - weightA;
+        }
+        return a.localeCompare(b);
+    });
+
+    sortedAccounts.forEach(username => {
+        const user = accounts[username];
+        const div = document.createElement("div");
+        div.className = "account-row";
+
+        let badgeClass = "badge-mitarbeiter";
+        if (user.role === "Management") badgeClass = "badge-management";
+        if (user.role === "Cheffe") badgeClass = "badge-cheffe";
+
+        div.innerHTML = `
+            <span class="user-name">${username}</span>
+            <span><span class="role-badge ${badgeClass}">${user.role}</span></span>
+            <div class="action-buttons">
+                <button class="rank-btn" onclick="changeRank('${username}', 1)">↑</button>
+                <button class="rank-btn" onclick="changeRank('${username}', -1)">↓</button>
+                <button class="delete-btn" onclick="deleteAccount('${username}')">Kündigen</button>
+            </div>
+        `;
+        list.appendChild(div);
+    });
+}
 
     // Sortieren, damit Cheffe oben steht
     const sortedUsernames = Object.keys(accounts).sort();
