--- a/management.html
+++ b/management.html
@@ -41,9 +41,11 @@
 
 <script src="script.js"></script>
 <script>
-    requireLogin();
-    setHeaderUser();
-    if (!isAdmin()) window.location.href = "index.html";
+    // In der management.html
+        requireLogin();
+        if (!isAdmin()) {
+            window.location.href = "index.html"; // Schickt normale Mitarbeiter zurück
+        }
 
     const rankOrder = ["Mitarbeiter_in", "Management", "Cheffe"];
 
